fix(frontend): event carousel items spacing with few items

--- a/apps/frontend/src/features/event/ui/components/EventCarousel/EventCarousel.module.css
+++ b/apps/frontend/src/features/event/ui/components/EventCarousel/EventCarousel.module.css
@@ -63,6 +63,7 @@
 
     display: grid;
     grid-auto-flow: column;
+    grid-auto-columns: min-content;
     gap: 1.5rem;
 
     overflow-x: scroll;
